# xbee_ansic_library

./: CMakeLists.txt
include/util/: srp.h
include/xbee/: device.h  serial.h
ports/idf/: platform_config.h  xbee_platform_idf.c  xbee_serial_idf.c
src/util/: srp.c  xbee_random_mbedtls.c
src/xbee/: xbee_device.c
